Add JSCS code style checking

--- a/app/data/package.json
+++ b/app/data/package.json
@@ -16,6 +16,7 @@
     "predeploy": "rm -f ./package.json && cp ./app/data/package.json .",
     "postdeploy": "rm -f ./package.json && ln -s ./app/data/package.json .",
     "start": "scripts/web-server.js",
+    "pretest": "./node_modules/jscs/bin/jscs test/unit/servicesSpec.js",
     "test": "./node_modules/karma/bin/karma start config/karma.conf.js --single-run --browsers PhantomJS --reporters=dots"
   },
   "repository": {
