--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
   - "0.10"
 
 before_script:
-  - npm install --quiet karma karma-jasmine karma-phantomjs-launcher
+  - npm install --quiet karma karma-jasmine karma-phantomjs-launcher jscs
   - ./scripts/web-server.js > /dev/null &
   - sleep 1 # give server time to start
 
